--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center relative z-10">
             <!-- Teks -->
             <div class="text-center md:text-left space-y-6">
-                <div class="inline-block px-4 py-1.5 bg-green-100 text-green-700 rounded-full text-sm font-bold border border-green-200">
-                    🎓 Investasi Cerdas untuk Masa Depan
+                <div class="inline-block px-4 py-1.5 bg-green-100 text-green-700 rounded-full text-sm font-bold border border-green-500">
+                    🎓 Investasi Cerdas
                 </div>
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 leading-tight">
                     Masa Depan <br/>
