--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
     </nav>
 
     <!-- ================= HERO SECTION ================= -->
-    <section id="home" class="pt-32 pb-16 md:pt-40 md:pb-24 px-4 bg-gradient-to-b from-green-50 to-white overflow-hidden relative">
+     <section id="home" class="pt-32 pb-16 md:pt-40 md:pb-24 px-4 bg-gradient-to-b from-green-50 to-white overflow-hidden relative">
         <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center relative z-10">
             <!-- Teks -->
             <div class="text-center md:text-left space-y-6">
-                <div class="inline-block px-4 py-1.5 bg-green-100 text-green-900 rounded-full text-sm font-bold border border-green-200">
-                    Investasi Cerdas
+                <!-- UKURAN FONT DIUBAH DI SINI (text-xl md:text-2xl) -->
+                <div class="inline-block px-6 py-2 bg-green-100 text-green-700 rounded-full text-xl md:text-2xl font-bold border border-green-200 shadow-sm animate-fade-in-up">
+                    🎓 Investasi Cerdas untuk Masa Depan
                 </div>
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 leading-tight">
                     Masa Depan <br/>
