--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="text-center md:text-left space-y-6">
                 <!-- UKURAN FONT DIUBAH DI SINI (text-xl md:text-2xl) -->
                 <div class="inline-block px-6 py-2 bg-green-100 text-green-700 rounded-full text-xl md:text-2xl font-bold border border-green-200 shadow-sm animate-fade-in-up">
-                    🎓 Investasi Cerdas untuk Masa Depan
+                    Investasi Cerdas
                 </div>
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 leading-tight">
                     Masa Depan <br/>
