Update title in index.html for course name change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worth It Course - Kursus Bahasa Inggris Jambi</title>
+    <title>Worth It Course - Kursus Bahasa Inggris dan CALISTUNG </title>
     
     <!-- Menggunakan Tailwind CSS untuk Tampilan -->
     <script src="https://cdn.tailwindcss.com"></script>
