--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
             <div class="relative group">
                 <div class="relative rounded-3xl overflow-hidden shadow-2xl border-4 border-white transform rotate-1 group-hover:rotate-0 transition-all duration-500">
                     <!-- FOTO DARI DRIVE ANDA -->
-                    <img 
-                        src="cs%20nov.jpg" 
-                        alt="Suasana Kelas Worth It Course" 
+                    <img src="cs nov.jpg" alt="Suasana Kelas Worth It Course" 
                         class="w-full h-full object-cover"
                         onerror="this.parentElement.innerHTML='<div class=\'bg-gray-200 h-96 flex items-center justify-center text-gray-500 font-bold\'>Foto Tidak Ditemukan<br>Pastikan file cs nov.jpg ada</div>';"
                     />
