--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="w-12 h-12 md:w-16 md:h-16 flex items-center justify-center">
                         <!-- Gambar Logo -->
                         <img 
-                            src="Logo%20Worth%20It%20Course%20(WIC).png" 
+                            src="Logo Worth It Course (WIC).png" 
                             alt="WIC Logo" 
                             class="w-full h-full object-contain drop-shadow-md"
                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
